<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:onClick="onCancel"    
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/cancel_string" />

    <Button
        android:id="@+id/btnTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:onClick="createTweet"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/compose_tweet" />

    <EditText
        android:id="@+id/etTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnCancel"
        android:ems="10"
        android:hint="@string/tweet_string"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvCharsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnTweet"
        android:layout_alignBottom="@+id/btnTweet"
        android:layout_toLeftOf="@+id/btnTweet"
        android:text="@string/character_count_string" />

</RelativeLayout>
