<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/dvivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:src="@drawable/twitter" />

    <TextView
        android:id="@+id/dvtvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/dvivProfileImage"
        android:text="@string/default_username" />

    <TextView
        android:id="@+id/dvtvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dvtvUserName"
        android:layout_toRightOf="@+id/dvivProfileImage"
        android:autoLink="all"
        android:linksClickable="true"
        android:paddingBottom="10dip"
        android:text="@string/default_user" />

    <TextView
        android:id="@+id/dvtvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dvivProfileImage"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/tweet_string" />

    <ImageView
        android:id="@+id/dvivMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dvtvBody"
        android:scaleType="centerCrop"
        android:src="@drawable/twitter" />
    
    <ImageButton
        android:id="@+id/btnReply"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="20dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:layout_below="@+id/dvivMedia"
        android:src="@drawable/reply" />

    <ImageButton
        android:id="@+id/btnRetweet"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:scaleType="centerCrop"
        android:layout_alignTop="@+id/btnReply"
        android:src="@drawable/retweet" />

    <ImageButton
        android:id="@+id/btnFavourite"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:layout_alignTop="@+id/btnReply"        
        android:src="@drawable/favourite" />
    
</RelativeLayout>