<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp" >

    <ImageButton
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:paddingTop="10dip"        
        android:paddingBottom="10dip"        
        android:paddingLeft="10dip"        
        android:paddingRight="10dip"       
        android:background="@null"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/twitter" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textIsSelectable="false"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/default_user" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:layout_below="@+id/tvUserName"
		android:textIsSelectable="false"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/default_tweet" />
<!--        android:autoLink="all"
 		android:linksClickable="true"          -->     	    	
    
    <TextView
        android:id="@+id/tvCreationTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/default_time" />

    <ImageView
        android:id="@+id/ivMedia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_alignLeft="@+id/tvBody"
        android:layout_below="@+id/tvBody"
        android:scaleType="centerCrop"
        android:src="@drawable/twitter" />

    <ImageButton
        android:id="@+id/ibReply"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ivMedia"
        android:layout_marginLeft="70dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/reply" />

    <ImageButton
        android:id="@+id/ibRetweet"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignTop="@+id/ibReply"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/retweet" />

        <ImageButton
            android:id="@+id/ibFavourite"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignTop="@+id/ibReply"
            android:layout_marginLeft="70dp"
            android:layout_toRightOf="@+id/ibRetweet"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/favourite" />
    
</RelativeLayout>
